# tp-individual

./: CMakeLists.txt
src/: main.cpp
src/accesoAArchivos/: ManejadorDeArchivo.cpp  ManejadorDeArchivo.h
src/estructurasDinamicas/: Lista.cpp  Lista.h
src/funcionesPrincipales/: ManejadorDeArchivo.cpp  ManejadorDeArchivo.h
src/struct/: NodoProducto.h  Producto.h
src/vista/: CargaDeDatos.cpp  CargaDeDatos.h  ImpresionDeDatos.cpp  ImpresionDeDatos.h
